Fixes #51: Fix upstream bug #80288

Make innodb_numa_interleave available again when building with libnuma
support.

Upstream bug report: http://bugs.mysql.com/bug.php?id=80288